Change index.js to be on root of project to and run on Render deploy service

--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
     "username": "postgres",
-    "password": "vm,-!Ij^Q,4'Si@%",
-    "database": "backend-projectm3",
+    "password": "postgres",
+    "database": "m02project",
     "host": "localhost",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "vm,-!Ij^Q,4'Si@%",
-    "database": "backend-projectm3",
+    "password": "postgres",
+    "database": "m02project",
     "host": "localhost",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
-    "password": "vm,-!Ij^Q,4'Si@%",
-    "database": "backend-projectm3",
+    "password": "postgres",
+    "database": "m02project",
     "host": "localhost",
     "dialect": "postgres"
   }
